// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task-reducer should handle UPDATE_TASK_DUE_DATE 1`] = `
Array [
  Object {
    "dueDate": "2019-03-27T03:00:00.000Z",
    "taskId": 0,
  },
]
`;

exports[`task-reducer should handle UPDATE_TASK_REMINDER 1`] = `
Array [
  Object {
    "reminderDt": "2019-03-27T03:00:00.000Z",    
    "taskId": 0,
  },
]
`;

exports[`task-reducer should handle UPDATE_TASK_PATIENT 1`] = `
Array [
  Object {
    "patient": Object {
      "patientId": 1,
    },
    "taskId": 0,
  },
]
`;
